# SLAE

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
SLAE/: __init__.py  inference.py
SLAE/configs/dataset/: pdb.yaml
SLAE/datasets/: __init__.py  dataloader.py  datamodule.py  dataset.py
SLAE/features/: __init__.py  fa_representation.py  graph_featurizer.py  transform.py
SLAE/io/: atom_tensor.py  write_pdb.py
SLAE/model/: __init__.py  decoder.py  encoder.py
SLAE/nn/: __init__.py  _allegro_module.py  _atomwise.py  _edgewise.py  base_model.py  bb_proj.py  cutoffs.py  graph_mixin.py  mlp_decoder.py  mlp_encoder.py  pos_enc.py  radial_basis.py  spmm.py  strided_irreps_ops.py  transformer_stack.py
SLAE/nn/embedding/: __init__.py  _edge.py  _node.py
SLAE/util/: __init__.py  _irrep_utils.py  avg_neighbor.py  constants.py  types.py
checkpoints/: autoencoder.ckpt  autoencoder_pdb.ckpt
scripts/: encode_decode_example.py  encode_example.py
tests/: test_build.py  test_import.py  test_inference_api.py
